--- a/scss/_estilosMain.scss
+++ b/scss/_estilosMain.scss
@@ -112,11 +112,12 @@ body {
   padding-right: 45px;
   color: $color8;
 }
+
 .carrito{
-  padding-top: 15px;
+padding: 20px;
 }
 .carrito-link {
-  display: block;
+
   padding: 0.5rem 1rem;
   color: $color8;
   text-decoration: none;
